syntax = "proto3";

option csharp_namespace = "ToDoAppPoc";

package todoapp;

import "google/api/annotations.proto";

// The greeting service definition.
service ToDoGrpcService {
  // Sends a greeting
  rpc CreateToDo (CreateToDoRequest) returns (CreateToDoResponse){
	  option(google.api.http) = {
		  post: "/v1/todo",
		  body: "*"
	  };
  }
  rpc ReadToDo (ReadToDoRequest) returns (ToDoItemResponse){
	  option(google.api.http) = {
		  get: "/v1/todo/{id}"		  
	  };
  }
  rpc ReadAll (ReadAllRequest) returns (ReadAllResponse){
	option(google.api.http) = {
		get: "/v1/todo"
	};
  }
  rpc UpdateToDo (UpdateToDoRequest) returns (UpdateToDoResponse){
	  option(google.api.http) = {
		  put: "/v1/todo",
		  body: "*"
	  };
  }
  rpc DeleteToDo (DeleteToDoRequest) returns (DeleteToDoResponse){
	  option(google.api.http) = {
		  delete: "/v1/todo/{id}"
	  };
  }
}

// The request message containing the user's name.
message CreateToDoRequest {
  string title = 1;
  string description = 2;
}

// The response message containing the greetings.
message CreateToDoResponse {
  string id = 1;
}

message ReadToDoRequest{
	string id = 1;
}

message ToDoItemResponse{
	string id=1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message ReadAllRequest{	
}
message ReadAllResponse{
	repeated ToDoItemResponse to_do=1;
}

message UpdateToDoRequest{	
	string id=1;
	string title = 2;
	string description = 3;
	string status = 4;
}
message UpdateToDoResponse{
	string id = 1;
}

message DeleteToDoRequest{	
	string id=1;	
}
message DeleteToDoResponse{
	
}
